tdf#127339 DOCX import: fix image hyperlink to bookmark target

Hyperlink inserted to image with bookmark target in DOCX documents
created with Microsoft Word didn't work.

Change-Id: I5f3bf150f62d11837b45851e221119dcff93dcaa